--- a/apps/web-business/src/index.css
+++ b/apps/web-business/src/index.css
@@ -131,6 +131,16 @@
   }
 }
 
+/* Hide scrollbar utility for horizontal carousels */
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 /** Styles for collapsible to have an animation */
 .CollapsibleContent {
   overflow: hidden;
